--- a/_includes/html/foot.html
+++ b/_includes/html/foot.html
@@ -1,4 +1,4 @@
-  <script src="/js/site.js"></script>
+  <script src="{{ site.baseurl }}/js/site.js"></script>
 
   <!-- include the Glitch button to show what the webpage is about and
         to make it easier for folks to view source and remix -->
