--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,7 +26,7 @@ layout: default
     {{ content }}
     {% for post in site.posts %}
       <article>
-        <h1><a href="{{ site.base_url }}{{ post.url }}">{{ post.title }}</a> {{post.slug}}</h1>
+        <h1><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a> {{post.slug}}</h1>
         <p>{{ post.date | date_to_string }}</p>
           <p>{{ post.excerpt | strip_html | strip_newlines | truncate: 156 }}</p>
       </article>
