--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -27,6 +27,7 @@ layout: default
     {% for post in site.posts %}
       <article>
         <h1><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a> {{post.slug}}</h1>
+        <small>{{ post.path }}</small>
         <p>{{ post.date | date_to_string }}</p>
           <p>{{ post.excerpt | strip_html | strip_newlines | truncate: 156 }}</p>
       </article>
