--- a/_layouts/category-pagination.html
+++ b/_layouts/category-pagination.html
@@ -50,6 +50,9 @@ count: {{ post_count }}<br>
 
 
 {% if current_page > total_pages  %}
+
+ Current: {{ current_page }}  
+ Total: {{ total_pages }}  
   
   <h2>The page you requested cannot be displayed right now.</h2>
   <p>It may be temporarily unavailable, the link you clicked on may be broken or expired, or you may not have permission to view this page.</p>
