--- a/_layouts/category-pagination.html
+++ b/_layouts/category-pagination.html
@@ -65,7 +65,7 @@ count: {{ post_count }}<br>
   {% assign mycol = post_array | sort: 'date' | reverse %}
 
   {% for item in mycol offset: offs limit: site.page.limit %}
-    <!-- {% unless item.categories contains 'blog' or item.categories contains 'resources' %} -->
+    <!-- {% unless item.categories contains 'resources' %} -->
     <li>
       <a href="{{ site.baseurl }}{{ item.url }}">
         {{ item.title }}
