--- a/_layouts/category-pagination.html
+++ b/_layouts/category-pagination.html
@@ -34,7 +34,7 @@ slug: {{ page.slug }}<br>
 collection: {{ name }}<br>
 page: {{ this_page }}<br>
 count: {{ post_count }}<br>
-category: {{ item.categories }}<br>
+category: {{ posts }}<br>
 =====<br><br>
 {% endif %}
 
