--- a/_layouts/category-pagination.html
+++ b/_layouts/category-pagination.html
@@ -34,6 +34,7 @@ slug: {{ page.slug }}<br>
 collection: {{ name }}<br>
 page: {{ this_page }}<br>
 count: {{ post_count }}<br>
+type: {{ page.type }}<br>
 =====<br><br>
 {% endif %}
 
